--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
-<h1>The Best Movies According to Ripura</h1>
-<h2>My top 3 Movies of all-time</h2>
-<hr />
-<h3>Harry Potter and the Philosopher's Stone</h3>
-<p>My first favourite film which hooked me into the Harry Potter Universe</p>
-<h3>Pride and Prejudice</h3>
-<p>
-  The Romantic film which I could watch it forever because,<br />
-  No explicity<br />
-  Just pure love<br />
-</p>
-<h3>Lucy</h3>
-<p>Unlocking the full capacity of Brain intrigued me</p>
+<!DOCTYPE html>
+
+<html lang="eng">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Sri Ripura's Portfolio</title>
+  </head>
+
+  <body>
+    <h1>Sri Ripura's Portfolio</h1>
+    <h2>I am a Web Developer</h2>
+    <hr />
+    <h3>
+      <a href="../2.4 Movie Ranking Project/index.html"
+        >Movie Ranking Project</a
+      >
+    </h3>
+    <img src="../Movie.png" height="200" alt="Favourite Movies" />
+    <h3>
+      <a href="../3.4 Birthday Invite Project/index.html"
+        >Birthday Invitation Project</a
+      >
+    </h3>
+    <img src="../Birthday.png" height="200" alt="Birthday Invitation Image" />
+
+    <br />
+    <hr />
+
+    <ul>
+      <li><a href="./public/contact.html">Contact Me</a></li>
+    </ul>
+    <li><a href="./public/about.html">About Me</a></li>
+  </body>
+</html>
+<!-- TODO 1: Create the HTML Boilerplate -->
+
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
